# ffmpeg_codotaku

./: CMakeLists.txt  LICENCE  README.md  main.cpp  remux.cpp  transcode.cpp
